--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,10 @@ services:
             MYSQL_ROOT_PASSWORD: root
         ports:
             - "3307:3306"
+        command: >
+            sh -c 'exec mysqld --init-file=/init-scripts/init-db.sql'
         volumes:
+            - ./init-db.sql:/init-scripts/init-db.sql
             - data:/var/lib/mysql
     # api:
     #     build: .
